[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"

[profile.release]
strip = true            # Automatically strip symbols from the binary.
opt-level = "z"         # Optimize for size.
lto = true              # Link Time Optimization is enabled
codegen-units = 1       # allow for maximum size reduction optimizations
panic = "abort"         # Configure action to do on panic
